seaqt/QtCore/gen_qrect.h

typedef struct QMargins QMargins;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QSizeF QSizeF;
QRect* QRect_new();
QRect* QRect_new_topleft_bottomright(QPoint* topleft, QPoint* bottomright);
QRect* QRect_new_topleft_size(QPoint* topleft, QSize* size);
QRect* QRect_new_left_top_width_height(int left, int top, int width, int height);
QRect* QRect_new_from(QRect* from);
bool QRect_isNull(const QRect* self);
bool QRect_isEmpty(const QRect* self);
bool QRect_isValid(const QRect* self);
int QRect_left(const QRect* self);
int QRect_top(const QRect* self);
int QRect_right(const QRect* self);
int QRect_bottom(const QRect* self);
QRect* QRect_normalized(const QRect* self);
int QRect_x(const QRect* self);
int QRect_y(const QRect* self);
void QRect_setLeft(QRect* self, int pos);
void QRect_setTop(QRect* self, int pos);
void QRect_setRight(QRect* self, int pos);
void QRect_setBottom(QRect* self, int pos);
void QRect_setX(QRect* self, int x);
void QRect_setY(QRect* self, int y);
void QRect_setTopLeft(QRect* self, QPoint* p);
void QRect_setBottomRight(QRect* self, QPoint* p);
void QRect_setTopRight(QRect* self, QPoint* p);
void QRect_setBottomLeft(QRect* self, QPoint* p);
QPoint* QRect_topLeft(const QRect* self);
QPoint* QRect_bottomRight(const QRect* self);
QPoint* QRect_topRight(const QRect* self);
QPoint* QRect_bottomLeft(const QRect* self);
QPoint* QRect_center(const QRect* self);
void QRect_moveLeft(QRect* self, int pos);
void QRect_moveTop(QRect* self, int pos);
void QRect_moveRight(QRect* self, int pos);
void QRect_moveBottom(QRect* self, int pos);
void QRect_moveTopLeft(QRect* self, QPoint* p);
void QRect_moveBottomRight(QRect* self, QPoint* p);
void QRect_moveTopRight(QRect* self, QPoint* p);
void QRect_moveBottomLeft(QRect* self, QPoint* p);
void QRect_moveCenter(QRect* self, QPoint* p);
void QRect_translate_dx_dy(QRect* self, int dx, int dy);
void QRect_translate_p(QRect* self, QPoint* p);
QRect* QRect_translated_dx_dy(const QRect* self, int dx, int dy);
QRect* QRect_translated_p(const QRect* self, QPoint* p);
QRect* QRect_transposed(const QRect* self);
void QRect_moveTo_x_t(QRect* self, int x, int t);
void QRect_moveTo_p(QRect* self, QPoint* p);
void QRect_setRect(QRect* self, int x, int y, int w, int h);
void QRect_getRect(const QRect* self, int* x, int* y, int* w, int* h);
void QRect_setCoords(QRect* self, int x1, int y1, int x2, int y2);
void QRect_getCoords(const QRect* self, int* x1, int* y1, int* x2, int* y2);
void QRect_adjust(QRect* self, int x1, int y1, int x2, int y2);
QRect* QRect_adjusted(const QRect* self, int x1, int y1, int x2, int y2);
QSize* QRect_size(const QRect* self);
int QRect_width(const QRect* self);
int QRect_height(const QRect* self);
void QRect_setWidth(QRect* self, int w);
void QRect_setHeight(QRect* self, int h);
void QRect_setSize(QRect* self, QSize* s);
QRect* QRect_operatorBitwiseOr(const QRect* self, QRect* r);
QRect* QRect_operatorBitwiseAnd(const QRect* self, QRect* r);
void QRect_operatorBitwiseOrAssign(QRect* self, QRect* r);
void QRect_operatorBitwiseAndAssign(QRect* self, QRect* r);
bool QRect_contains_r(const QRect* self, QRect* r);
bool QRect_contains_p(const QRect* self, QPoint* p);
bool QRect_contains_x_y(const QRect* self, int x, int y);
bool QRect_contains_x_y_proper(const QRect* self, int x, int y, bool proper);
QRect* QRect_united(const QRect* self, QRect* other);
QRect* QRect_intersected(const QRect* self, QRect* other);
bool QRect_intersects(const QRect* self, QRect* r);
QRect* QRect_marginsAdded(const QRect* self, QMargins* margins);
QRect* QRect_marginsRemoved(const QRect* self, QMargins* margins);
QRect* QRect_operatorPlusAssign(QRect* self, QMargins* margins);
QRect* QRect_operatorMinusAssign(QRect* self, QMargins* margins);
void QRect_operatorAssign(QRect* self, QRect* from);
bool QRect_contains_r_proper(const QRect* self, QRect* r, bool proper);
bool QRect_contains_p_proper(const QRect* self, QPoint* p, bool proper);
bool QRectF_isNull(const QRectF* self);
bool QRectF_isEmpty(const QRectF* self);
bool QRectF_isValid(const QRectF* self);
QRectF* QRectF_normalized(const QRectF* self);
double QRectF_left(const QRectF* self);
double QRectF_top(const QRectF* self);
double QRectF_right(const QRectF* self);
double QRectF_bottom(const QRectF* self);
double QRectF_x(const QRectF* self);
double QRectF_y(const QRectF* self);
void QRectF_setLeft(QRectF* self, double pos);
void QRectF_setTop(QRectF* self, double pos);
void QRectF_setRight(QRectF* self, double pos);
void QRectF_setBottom(QRectF* self, double pos);
void QRectF_setX(QRectF* self, double pos);
void QRectF_setY(QRectF* self, double pos);
QPointF* QRectF_topLeft(const QRectF* self);
QPointF* QRectF_bottomRight(const QRectF* self);
QPointF* QRectF_topRight(const QRectF* self);
QPointF* QRectF_bottomLeft(const QRectF* self);
QPointF* QRectF_center(const QRectF* self);
void QRectF_setTopLeft(QRectF* self, QPointF* p);
void QRectF_setBottomRight(QRectF* self, QPointF* p);
void QRectF_setTopRight(QRectF* self, QPointF* p);
void QRectF_setBottomLeft(QRectF* self, QPointF* p);
void QRectF_moveLeft(QRectF* self, double pos);
void QRectF_moveTop(QRectF* self, double pos);
void QRectF_moveRight(QRectF* self, double pos);
void QRectF_moveBottom(QRectF* self, double pos);
void QRectF_moveTopLeft(QRectF* self, QPointF* p);
void QRectF_moveBottomRight(QRectF* self, QPointF* p);
void QRectF_moveTopRight(QRectF* self, QPointF* p);
void QRectF_moveBottomLeft(QRectF* self, QPointF* p);
void QRectF_moveCenter(QRectF* self, QPointF* p);
void QRectF_translate_dx_dy(QRectF* self, double dx, double dy);
void QRectF_translate_p(QRectF* self, QPointF* p);
QRectF* QRectF_translated_dx_dy(const QRectF* self, double dx, double dy);
QRectF* QRectF_translated_p(const QRectF* self, QPointF* p);
QRectF* QRectF_transposed(const QRectF* self);
void QRectF_moveTo_x_y(QRectF* self, double x, double y);
void QRectF_moveTo_p(QRectF* self, QPointF* p);
void QRectF_setRect(QRectF* self, double x, double y, double w, double h);
void QRectF_getRect(const QRectF* self, double* x, double* y, double* w, double* h);
void QRectF_setCoords(QRectF* self, double x1, double y1, double x2, double y2);
void QRectF_getCoords(const QRectF* self, double* x1, double* y1, double* x2, double* y2);
void QRectF_adjust(QRectF* self, double x1, double y1, double x2, double y2);
QRectF* QRectF_adjusted(const QRectF* self, double x1, double y1, double x2, double y2);
QSizeF* QRectF_size(const QRectF* self);
double QRectF_width(const QRectF* self);
double QRectF_height(const QRectF* self);
void QRectF_setWidth(QRectF* self, double w);
void QRectF_setHeight(QRectF* self, double h);
void QRectF_setSize(QRectF* self, QSizeF* s);
QRectF* QRectF_operatorBitwiseOr(const QRectF* self, QRectF* r);
QRectF* QRectF_operatorBitwiseAnd(const QRectF* self, QRectF* r);