seaqt/QtCore/gen_qrect.nim


proc fcQRect_isNull(self: pointer): bool {.importc: "QRect_isNull".}
proc fcQRect_isEmpty(self: pointer): bool {.importc: "QRect_isEmpty".}
proc fcQRect_isValid(self: pointer): bool {.importc: "QRect_isValid".}
proc fcQRect_left(self: pointer): cint {.importc: "QRect_left".}
proc fcQRect_top(self: pointer): cint {.importc: "QRect_top".}
proc fcQRect_right(self: pointer): cint {.importc: "QRect_right".}
proc fcQRect_bottom(self: pointer): cint {.importc: "QRect_bottom".}
proc fcQRect_normalized(self: pointer): pointer {.importc: "QRect_normalized".}
proc fcQRect_x(self: pointer): cint {.importc: "QRect_x".}
proc fcQRect_y(self: pointer): cint {.importc: "QRect_y".}
proc fcQRect_setLeft(self: pointer, pos: cint): void {.importc: "QRect_setLeft".}
proc fcQRect_setTop(self: pointer, pos: cint): void {.importc: "QRect_setTop".}
proc fcQRect_setRight(self: pointer, pos: cint): void {.importc: "QRect_setRight".}
proc fcQRect_setBottom(self: pointer, pos: cint): void {.importc: "QRect_setBottom".}
proc fcQRect_setX(self: pointer, x: cint): void {.importc: "QRect_setX".}
proc fcQRect_setY(self: pointer, y: cint): void {.importc: "QRect_setY".}
proc fcQRect_setTopLeft(self: pointer, p: pointer): void {.importc: "QRect_setTopLeft".}
proc fcQRect_setBottomRight(self: pointer, p: pointer): void {.importc: "QRect_setBottomRight".}
proc fcQRect_setTopRight(self: pointer, p: pointer): void {.importc: "QRect_setTopRight".}
proc fcQRect_setBottomLeft(self: pointer, p: pointer): void {.importc: "QRect_setBottomLeft".}
proc fcQRect_topLeft(self: pointer): pointer {.importc: "QRect_topLeft".}
proc fcQRect_bottomRight(self: pointer): pointer {.importc: "QRect_bottomRight".}
proc fcQRect_topRight(self: pointer): pointer {.importc: "QRect_topRight".}
proc fcQRect_bottomLeft(self: pointer): pointer {.importc: "QRect_bottomLeft".}
proc fcQRect_center(self: pointer): pointer {.importc: "QRect_center".}
proc fcQRect_moveLeft(self: pointer, pos: cint): void {.importc: "QRect_moveLeft".}
proc fcQRect_moveTop(self: pointer, pos: cint): void {.importc: "QRect_moveTop".}
proc fcQRect_moveRight(self: pointer, pos: cint): void {.importc: "QRect_moveRight".}
proc fcQRect_moveBottom(self: pointer, pos: cint): void {.importc: "QRect_moveBottom".}
proc fcQRect_moveTopLeft(self: pointer, p: pointer): void {.importc: "QRect_moveTopLeft".}
proc fcQRect_moveBottomRight(self: pointer, p: pointer): void {.importc: "QRect_moveBottomRight".}
proc fcQRect_moveTopRight(self: pointer, p: pointer): void {.importc: "QRect_moveTopRight".}
proc fcQRect_moveBottomLeft(self: pointer, p: pointer): void {.importc: "QRect_moveBottomLeft".}
proc fcQRect_moveCenter(self: pointer, p: pointer): void {.importc: "QRect_moveCenter".}
proc fcQRect_translateDxDy(self: pointer, dx: cint, dy: cint): void {.importc: "QRect_translate_dx_dy".}
proc fcQRect_translateP(self: pointer, p: pointer): void {.importc: "QRect_translate_p".}
proc fcQRect_translatedDxDy(self: pointer, dx: cint, dy: cint): pointer {.importc: "QRect_translated_dx_dy".}
proc fcQRect_translatedP(self: pointer, p: pointer): pointer {.importc: "QRect_translated_p".}
proc fcQRect_transposed(self: pointer): pointer {.importc: "QRect_transposed".}
proc fcQRect_moveToXT(self: pointer, x: cint, t: cint): void {.importc: "QRect_moveTo_x_t".}
proc fcQRect_moveToP(self: pointer, p: pointer): void {.importc: "QRect_moveTo_p".}
proc fcQRect_setRect(self: pointer, x: cint, y: cint, w: cint, h: cint): void {.importc: "QRect_setRect".}
proc fcQRect_getRect(self: pointer, x: ptr cint, y: ptr cint, w: ptr cint, h: ptr cint): void {.importc: "QRect_getRect".}
proc fcQRect_setCoords(self: pointer, x1: cint, y1: cint, x2: cint, y2: cint): void {.importc: "QRect_setCoords".}
proc fcQRect_getCoords(self: pointer, x1: ptr cint, y1: ptr cint, x2: ptr cint, y2: ptr cint): void {.importc: "QRect_getCoords".}
proc fcQRect_adjust(self: pointer, x1: cint, y1: cint, x2: cint, y2: cint): void {.importc: "QRect_adjust".}
proc fcQRect_adjusted(self: pointer, x1: cint, y1: cint, x2: cint, y2: cint): pointer {.importc: "QRect_adjusted".}
proc fcQRect_size(self: pointer): pointer {.importc: "QRect_size".}
proc fcQRect_width(self: pointer): cint {.importc: "QRect_width".}
proc fcQRect_height(self: pointer): cint {.importc: "QRect_height".}
proc fcQRect_setWidth(self: pointer, w: cint): void {.importc: "QRect_setWidth".}
proc fcQRect_setHeight(self: pointer, h: cint): void {.importc: "QRect_setHeight".}
proc fcQRect_setSize(self: pointer, s: pointer): void {.importc: "QRect_setSize".}
proc fcQRect_operatorBitwiseOr(self: pointer, r: pointer): pointer {.importc: "QRect_operatorBitwiseOr".}
proc fcQRect_operatorBitwiseAnd(self: pointer, r: pointer): pointer {.importc: "QRect_operatorBitwiseAnd".}
proc fcQRect_operatorBitwiseOrAssign(self: pointer, r: pointer): void {.importc: "QRect_operatorBitwiseOrAssign".}
proc fcQRect_operatorBitwiseAndAssign(self: pointer, r: pointer): void {.importc: "QRect_operatorBitwiseAndAssign".}
proc fcQRect_containsR(self: pointer, r: pointer): bool {.importc: "QRect_contains_r".}
proc fcQRect_containsP(self: pointer, p: pointer): bool {.importc: "QRect_contains_p".}
proc fcQRect_containsXY(self: pointer, x: cint, y: cint): bool {.importc: "QRect_contains_x_y".}
proc fcQRect_containsXYProper(self: pointer, x: cint, y: cint, proper: bool): bool {.importc: "QRect_contains_x_y_proper".}
proc fcQRect_united(self: pointer, other: pointer): pointer {.importc: "QRect_united".}
proc fcQRect_intersected(self: pointer, other: pointer): pointer {.importc: "QRect_intersected".}
proc fcQRect_intersects(self: pointer, r: pointer): bool {.importc: "QRect_intersects".}
proc fcQRect_marginsAdded(self: pointer, margins: pointer): pointer {.importc: "QRect_marginsAdded".}
proc fcQRect_marginsRemoved(self: pointer, margins: pointer): pointer {.importc: "QRect_marginsRemoved".}
proc fcQRect_operatorPlusAssign(self: pointer, margins: pointer): pointer {.importc: "QRect_operatorPlusAssign".}
proc fcQRect_operatorMinusAssign(self: pointer, margins: pointer): pointer {.importc: "QRect_operatorMinusAssign".}
proc fcQRect_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QRect_operatorAssign".}
proc fcQRect_containsRProper(self: pointer, r: pointer, proper: bool): bool {.importc: "QRect_contains_r_proper".}
proc fcQRect_containsPProper(self: pointer, p: pointer, proper: bool): bool {.importc: "QRect_contains_p_proper".}
proc fcQRect_new(): ptr cQRect {.importc: "QRect_new".}
proc fcQRect_new2(topleft: pointer, bottomright: pointer): ptr cQRect {.importc: "QRect_new_topleft_bottomright".}
proc fcQRect_new3(topleft: pointer, size: pointer): ptr cQRect {.importc: "QRect_new_topleft_size".}
proc fcQRect_new4(left: cint, top: cint, width: cint, height: cint): ptr cQRect {.importc: "QRect_new_left_top_width_height".}
proc fcQRect_new5(fromVal: pointer): ptr cQRect {.importc: "QRect_new_from".}
proc fcQRectF_isNull(self: pointer): bool {.importc: "QRectF_isNull".}
proc fcQRectF_isEmpty(self: pointer): bool {.importc: "QRectF_isEmpty".}
proc fcQRectF_isValid(self: pointer): bool {.importc: "QRectF_isValid".}
proc fcQRectF_normalized(self: pointer): pointer {.importc: "QRectF_normalized".}
proc fcQRectF_left(self: pointer): float64 {.importc: "QRectF_left".}
proc fcQRectF_top(self: pointer): float64 {.importc: "QRectF_top".}
proc fcQRectF_right(self: pointer): float64 {.importc: "QRectF_right".}
proc fcQRectF_bottom(self: pointer): float64 {.importc: "QRectF_bottom".}
proc fcQRectF_x(self: pointer): float64 {.importc: "QRectF_x".}
proc fcQRectF_y(self: pointer): float64 {.importc: "QRectF_y".}
proc fcQRectF_setLeft(self: pointer, pos: float64): void {.importc: "QRectF_setLeft".}
proc fcQRectF_setTop(self: pointer, pos: float64): void {.importc: "QRectF_setTop".}
proc fcQRectF_setRight(self: pointer, pos: float64): void {.importc: "QRectF_setRight".}
proc fcQRectF_setBottom(self: pointer, pos: float64): void {.importc: "QRectF_setBottom".}
proc fcQRectF_setX(self: pointer, pos: float64): void {.importc: "QRectF_setX".}
proc fcQRectF_setY(self: pointer, pos: float64): void {.importc: "QRectF_setY".}
proc fcQRectF_topLeft(self: pointer): pointer {.importc: "QRectF_topLeft".}
proc fcQRectF_bottomRight(self: pointer): pointer {.importc: "QRectF_bottomRight".}
proc fcQRectF_topRight(self: pointer): pointer {.importc: "QRectF_topRight".}
proc fcQRectF_bottomLeft(self: pointer): pointer {.importc: "QRectF_bottomLeft".}
proc fcQRectF_center(self: pointer): pointer {.importc: "QRectF_center".}
proc fcQRectF_setTopLeft(self: pointer, p: pointer): void {.importc: "QRectF_setTopLeft".}
proc fcQRectF_setBottomRight(self: pointer, p: pointer): void {.importc: "QRectF_setBottomRight".}
proc fcQRectF_setTopRight(self: pointer, p: pointer): void {.importc: "QRectF_setTopRight".}
proc fcQRectF_setBottomLeft(self: pointer, p: pointer): void {.importc: "QRectF_setBottomLeft".}
proc fcQRectF_moveLeft(self: pointer, pos: float64): void {.importc: "QRectF_moveLeft".}
proc fcQRectF_moveTop(self: pointer, pos: float64): void {.importc: "QRectF_moveTop".}
proc fcQRectF_moveRight(self: pointer, pos: float64): void {.importc: "QRectF_moveRight".}
proc fcQRectF_moveBottom(self: pointer, pos: float64): void {.importc: "QRectF_moveBottom".}
proc fcQRectF_moveTopLeft(self: pointer, p: pointer): void {.importc: "QRectF_moveTopLeft".}
proc fcQRectF_moveBottomRight(self: pointer, p: pointer): void {.importc: "QRectF_moveBottomRight".}
proc fcQRectF_moveTopRight(self: pointer, p: pointer): void {.importc: "QRectF_moveTopRight".}
proc fcQRectF_moveBottomLeft(self: pointer, p: pointer): void {.importc: "QRectF_moveBottomLeft".}
proc fcQRectF_moveCenter(self: pointer, p: pointer): void {.importc: "QRectF_moveCenter".}
proc fcQRectF_translateDxDy(self: pointer, dx: float64, dy: float64): void {.importc: "QRectF_translate_dx_dy".}
proc fcQRectF_translateP(self: pointer, p: pointer): void {.importc: "QRectF_translate_p".}
proc fcQRectF_translatedDxDy(self: pointer, dx: float64, dy: float64): pointer {.importc: "QRectF_translated_dx_dy".}
proc fcQRectF_translatedP(self: pointer, p: pointer): pointer {.importc: "QRectF_translated_p".}
proc fcQRectF_transposed(self: pointer): pointer {.importc: "QRectF_transposed".}
proc fcQRectF_moveToXY(self: pointer, x: float64, y: float64): void {.importc: "QRectF_moveTo_x_y".}
proc fcQRectF_moveToP(self: pointer, p: pointer): void {.importc: "QRectF_moveTo_p".}
proc fcQRectF_setRect(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QRectF_setRect".}
proc fcQRectF_getRect(self: pointer, x: ptr float64, y: ptr float64, w: ptr float64, h: ptr float64): void {.importc: "QRectF_getRect".}
proc fcQRectF_setCoords(self: pointer, x1: float64, y1: float64, x2: float64, y2: float64): void {.importc: "QRectF_setCoords".}
proc fcQRectF_getCoords(self: pointer, x1: ptr float64, y1: ptr float64, x2: ptr float64, y2: ptr float64): void {.importc: "QRectF_getCoords".}
proc fcQRectF_adjust(self: pointer, x1: float64, y1: float64, x2: float64, y2: float64): void {.importc: "QRectF_adjust".}
proc fcQRectF_adjusted(self: pointer, x1: float64, y1: float64, x2: float64, y2: float64): pointer {.importc: "QRectF_adjusted".}
proc fcQRectF_size(self: pointer): pointer {.importc: "QRectF_size".}
proc fcQRectF_width(self: pointer): float64 {.importc: "QRectF_width".}
proc fcQRectF_height(self: pointer): float64 {.importc: "QRectF_height".}
proc fcQRectF_setWidth(self: pointer, w: float64): void {.importc: "QRectF_setWidth".}
proc fcQRectF_setHeight(self: pointer, h: float64): void {.importc: "QRectF_setHeight".}
proc fcQRectF_setSize(self: pointer, s: pointer): void {.importc: "QRectF_setSize".}
proc fcQRectF_operatorBitwiseOr(self: pointer, r: pointer): pointer {.importc: "QRectF_operatorBitwiseOr".}
proc fcQRectF_operatorBitwiseAnd(self: pointer, r: pointer): pointer {.importc: "QRectF_operatorBitwiseAnd".}
